content: improve Trelasarra–Val post hook and homepage card

--- a/site/index.html
+++ b/site/index.html
@@ -22,8 +22,9 @@
 
     <div class="card">
       <span class="tag">Primer artículo</span>
-      <h2 style="margin:10px 0 6px;">Combo: Trelasarra + Val (vida, adivinar y daño)</h2>
-      <p style="margin:0 0 10px;color:#b7bcc7;">Cómo funciona el motor de triggers y cómo convertirlo en un plan de victoria.</p>
+      <span class="tag">Historic / Arena</span>
+      <h2 style="margin:10px 0 6px;">Trelasarra + Val: el motor que convierte adivinar en daño</h2>
+      <p style="margin:0 0 10px;color:#b7bcc7;">Bucle de triggers, ventanas de interacción y cómo convertirlo en plan de victoria en Historic (Arena).</p>
       <a href="/es/combo-trelasarra-val/">Leer artículo →</a>
     </div>
   </div>
